# bidding-framework

./: .gitignore  .mcp.json  CLAUDE.md  CURRENT_STATE.md  README.md
src/ai-service/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  main.py  pyproject.toml  worker.py
src/ai-service/activities/: __init__.py  assembly.py  ba_analysis.py  bid_workspace.py  commercial.py  context_synthesis.py  convergence.py  domain_mining.py  intake.py  materialize_workspace.py  notify.py  retrospective.py  review.py  sa_analysis.py  scoping.py  solution_design.py  state_transition.py  stream_stubs.py  submission.py  triage.py  wbs.py
src/ai-service/agents/: __init__.py  _streaming.py  ba_agent.py  commercial_agent.py  convergence_agent.py  domain_agent.py  models.py  retrospective_agent.py  sa_agent.py  solution_design_agent.py  stream_publisher.py  triage_agent.py  wbs_agent.py
src/ai-service/agents/prompts/: __init__.py  atom_extractor.py  ba_agent.py  commercial_agent.py  convergence_agent.py  domain_agent.py  file_classifier.py  retrospective_agent.py  sa_agent.py  solution_design_agent.py  synth.py  wbs_agent.py
src/ai-service/assembly/: __init__.py  consistency.py  renderer.py
src/ai-service/config/: __init__.py  claude.py  embeddings.py  ingestion.py  langfuse.py  llm.py  qdrant.py  temporal.py
src/ai-service/ingestion/: __init__.py  __main__.py  entry.py  graph_store.py  ingestion_service.py  link_extractor.py  vault_parser.py  vault_scanner.py  watcher.py
src/ai-service/kb_writer/: __init__.py  __main__.py  atom_emitter.py  bid_workspace.py  kb_delta.py  manifest_writer.py  models.py  pack_builder.py  templates.py
src/ai-service/parsers/: __init__.py  atom_extractor.py  conflict_detector.py  docx_adapter.py  file_classifier.py  md_adapter.py  models.py  pypdf_adapter.py  rfp_extractor.py  synth.py  txt_adapter.py  xlsx_adapter.py
src/ai-service/rag/: __init__.py  embeddings.py  indexer.py  payload_schema.py  retriever.py  seed.py  tenant.py
src/ai-service/rag/sample_docs/: project-acme-core-banking.md  project-fluora-saas-billing.md  project-ironworks-mes.md  project-medix-emr.md  project-nova-ecommerce.md  project-telora-5g-bss.md  project-vesta-bank-digital-onboarding.md  template-hld-microservices.md  template-wbs-banking-migration.md
src/ai-service/templates/proposal/: 00-cover.md.j2  01-executive-summary.md.j2  02-business-requirements.md.j2  03-technical-approach.md.j2  04-wbs-estimation.md.j2  05-pricing-commercials.md.j2  06-terms-appendix.md.j2  _macros.md.j2
src/ai-service/tests/: conftest.py  test_acl.py  test_activities.py  test_atom_emitter.py  test_atom_extractor.py  test_ba_agent.py  test_ba_agent_streaming.py  test_bid_workspace.py  test_claude_client.py  test_claude_client_shim.py  test_claude_client_tracing.py  test_commercial_agent.py  test_conflict_detector.py  test_context_synthesis_activity.py  test_convergence.py  test_convergence_agent.py  test_domain_agent.py  test_file_classifier.py  test_ingestion.py  test_ingestion_two_collection.py  test_kb_delta.py  test_kb_writer.py  test_langfuse_client.py  test_llm_client.py  test_llm_conversation.py  test_llm_settings.py  test_llm_tier_routing.py  test_manifest_writer.py  test_md_adapter.py  test_object_store.py  test_pack_builder.py  test_parsers.py  test_payload_schema.py  test_proposal_consistency.py  test_proposal_renderer.py  test_rag.py  test_retrospective_agent.py  test_role_filter.py  test_sa_agent.py  test_solution_design_agent.py  (+14 more)
src/ai-service/tests/fixtures/: bid_states.py
src/ai-service/tools/: __init__.py  claude_client.py  kb_search.py  langfuse_client.py  object_store.py
src/ai-service/tools/llm/: __init__.py  client.py  conversation.py  cost.py  (+5 more)
src/ai-service/workflows/: __init__.py  acl.py  artifacts.py  base.py  bid_workflow.py  models.py  router.py
(+246 files in other folders)
