[tool.poetry]
name = "ai-service"
version = "0.1.0"
description = "AI Bidding Framework — Python FastAPI + Temporal workers + LangGraph agents"
authors = ["Bidding Framework Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
temporalio = "^1.7.0"
langgraph = "^0.2.0"
langchain-core = "^0.3.0"
langchain-anthropic = "^0.2.0"
anthropic = "^0.39.0"
litellm = "^1.50.0"
qdrant-client = "^1.11.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"
httpx = "^0.27.0"
redis = "^5.1.0"
python-multipart = "^0.0.12"
fastembed = "^0.3.0"  # task 1.4
anyio = "^4.4.0"  # task 1.4
cohere = "^5.10.0"  # task 1.4
watchdog = "^5.0.0"  # task 1.5 — optional; ingestion falls back to polling

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
black = "^24.8.0"
ruff = "^0.6.0"
mypy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
