[tool.poetry]
name = "ai-service"
version = "0.1.0"
description = "AI Bidding Framework — Python FastAPI + Temporal workers + LangGraph agents"
authors = ["Bidding Framework Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
temporalio = "^1.7.0"
langgraph = "^0.2.0"
langchain-core = "^0.3.0"
langchain-anthropic = "^0.2.0"
anthropic = "^0.39.0"
litellm = "^1.50.0"
qdrant-client = "^1.11.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"
httpx = "^0.27.0"
redis = "^5.1.0"
python-multipart = "^0.0.12"
fastembed = "^0.3.0"  # task 1.4
anyio = "^4.4.0"  # task 1.4
cohere = "^5.10.0"  # task 1.4
watchdog = "^5.0.0"  # task 1.5 — optional; ingestion falls back to polling
pypdf = "^5.1.0"  # task 2.3 — pure-Python PDF text extraction
python-docx = "^1.1.0"  # task 2.3 — DOCX heading/table extraction
python-frontmatter = "^1.1.0"  # task 2.7 — markdown frontmatter round-trip for bid_output files
langfuse = "^2.59.0"  # phase 3.5 — LLM observability (self-hosted; no-op fallback when LANGFUSE_SECRET_KEY unset)
jinja2 = "^3.1.0"  # phase 3.1 — proposal section templates
tenacity = "^9.0.0"  # phase 3.7 — async retry decorator for LLM transient errors
minio = "^7.2"  # S0.5 Wave 1 — S3-compatible client for object_store wrapper (parse-session originals)
openpyxl = "^3.1"  # S0.5 Wave 2A — XLSX adapter for compliance-matrix workbooks

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
black = "^24.8.0"
ruff = "^0.6.0"
mypy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Default run skips LLM-dependent integration tests. Opt in with `pytest -m integration`.
addopts = "-m 'not integration'"
markers = [
    "integration: tests that hit real external services (Anthropic / Qdrant). Require ANTHROPIC_API_KEY.",
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
